# Committers

./: .gitignore  Cargo.toml  README.md  blacklist.txt
.github/workflows/: blacklist.yml  update.yml
data/: output.json  ranked.json  raw.json
frontend/: astro.config.mjs  package.json
frontend/data/: output.json
frontend/public/: _redirects
frontend/src/components/: ListItem.astro
frontend/src/layouts/: Layout.astro
frontend/src/pages/: index.astro
frontend/src/pages/badges/: 404.ts  [...name].svg.ts  [...name].ts
loader/: Cargo.toml
loader/src/: main.rs  preset.rs  schema.docs.graphql  users.graphql
src/: main.rs  preset.rs
